# zk-state-proofs

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh
circuits/: Cargo.toml
circuits/elf/: riscv32im-succinct-zkvm-elf
circuits/merkle-proof/: Cargo.toml
circuits/merkle-proof-recursive/src/: main.rs
circuits/merkle-proof/src/: main.rs
circuits/risc0-merkle-proof/: Cargo.toml
circuits/risc0-merkle-proof/merkle-proof-circuit/: Cargo.toml
circuits/risc0-merkle-proof/merkle-proof-circuit/circuit/: Cargo.toml
circuits/risc0-merkle-proof/merkle-proof-circuit/circuit/src/: main.rs
circuits/risc0-storage-proof/: Cargo.toml
circuits/risc0-storage-proof/storage-proof-circuit/: Cargo.toml
circuits/risc0-storage-proof/storage-proof-circuit/storage-circuit/: Cargo.toml
circuits/risc0-storage-proof/storage-proof-circuit/storage-circuit/src/: main.rs
circuits/sp1-merkle-proof/: Cargo.toml
circuits/sp1-merkle-proof-recursive/: Cargo.toml
circuits/sp1-merkle-proof-recursive/src/: main.rs
circuits/sp1-merkle-proof/src/: main.rs
crypto-ops/: Cargo.toml
crypto-ops/src/: keccak.rs  lib.rs  types.rs
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: keccak.rs  lib.rs
program/: Cargo.toml
program-tx-merkle/: Cargo.toml
program-tx-merkle/src/: main.rs
program-tx-recursive/: Cargo.toml
program-tx-recursive/src/: main.rs
program/src/: main.rs
prover/: Cargo.toml  build.rs
rpc/: Cargo.toml
rpc/src/: artifacts.txt  lib.rs
script/: Cargo.toml
script-tx-merkle/: Cargo.toml  build.rs
trie-utils/: Cargo.toml
trie-utils/src/: constants.rs  lib.rs  macros.rs  receipt.rs  types.rs
trie-utils/src/proofs/: account.rs  mod.rs  receipt.rs  storage.rs  transaction.rs
trie-utils/src/proofs/arbitrum/: client.rs  types.rs
trie-utils/src/proofs/optimism/: client.rs  types.rs
trie-utils/tests/: account.rs  receipt.rs  rlp.rs  storage.rs  transaction.rs
