[package]
name = "crypto-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny-keccak = "2.0.2"
tiny-keccak-sp1 = { package = "tiny-keccak", git = "https://github.com/sp1-patches/tiny-keccak", features = [
    "keccak",
], optional = true }
alloy-primitives = "0.8.12"
eth_trie = { git = "https://github.com/jonas089/eth-trie.rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
sp1 = ["tiny-keccak-sp1"]
