[package]
name = "merkle-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", features = [
    "keccak",
] }
alloy-primitives = "0.8.12"
eth_trie = { git = "https://github.com/jonas089/eth-trie.rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
